feat: initialize new EHSM portal application with login, dashboard, incident, and risk management modules, including views, controllers, and local data.

--- a/webapp/manifest.json
+++ b/webapp/manifest.json
@@ -90,17 +90,50 @@
       },
       "routes": [
         {
-          "name": "RouteView1",
-          "pattern": ":?query:",
+          "name": "RouteLogin",
+          "pattern": "",
           "target": [
-            "TargetView1"
+            "TargetLogin"
+          ]
+        },
+        {
+          "name": "RouteDashboard",
+          "pattern": "dashboard",
+          "target": [
+            "TargetDashboard"
+          ]
+        },
+        {
+          "name": "RouteRiskAssessment",
+          "pattern": "risk-assessment",
+          "target": [
+            "TargetRiskAssessment"
+          ]
+        },
+        {
+          "name": "RouteIncidentManagement",
+          "pattern": "incident-management",
+          "target": [
+            "TargetIncidentManagement"
           ]
         }
       ],
       "targets": {
-        "TargetView1": {
-          "id": "View1",
-          "name": "View1"
+        "TargetLogin": {
+          "id": "Login",
+          "name": "Login"
+        },
+        "TargetDashboard": {
+          "id": "Dashboard",
+          "name": "Dashboard"
+        },
+        "TargetRiskAssessment": {
+          "id": "RiskAssessment",
+          "name": "RiskAssessment"
+        },
+        "TargetIncidentManagement": {
+          "id": "IncidentManagement",
+          "name": "IncidentManagement"
         }
       }
     },
